--- a/PO2Helper/PO2Helper.csproj
+++ b/PO2Helper/PO2Helper.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Src\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Src\MyConverter.cs" />
     <Compile Include="Src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Src\MainForm.resx">
